--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "@particle-network/chains": "^1.3.16",
     "@particle-network/connectkit": "^1.3.5",
     "@particle-network/connectors": "^1.3.2",
+    "antd": "^5.14.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
