--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "supertoken-wizard-particle-dca-hack",
+  "description": "Superfluid's SuperToken Wizard",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
+  "author": "Salman Dabbakuti",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +13,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@ethersproject/address": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
     "@particle-network/chains": "^1.3.16",
     "@particle-network/connectkit": "^1.3.5",
     "@particle-network/connectors": "^1.3.2",
