--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,19 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp/
 .pnp.js
-.yarn/install-state.gz
-
-# testing
-/coverage
+package-lock.json
+.vscode/
+thunder-tests/
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
@@ -34,6 +33,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-package-lock.json
+
+# Hardhat files
+artifacts/
+cache/
+coverage/
 .env
-*.env
